crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_plugins_acquire.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    plugins:\n    { interfaces: [\"emery:adapter/probe\"], acquire: omnia::MountAcquire, },\n    guests: [{ id: \"engine\", source: \"engine.wasm\" },], mounts:\n    [{ name: \".\", path: project_root() },],\n}))"
---
mod runtime {
    use anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    struct Hooks;
    impl omnia::Wiring<()> for Hooks {
        fn link(deployment: &mut omnia::Deployment<omnia::StoreCtx<()>>) -> Result<()> {
            deployment.host::<omnia::WasiPlugins, ()>()?;
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<()>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            (),
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .manifest(
                        omnia::ManifestSource::Inline(
                            omnia::Manifest::new()
                                .plugins(["emery:adapter/probe"])
                                .guest(omnia::GuestEntry::new("engine", "engine.wasm"))
                                .mounts([
                                    omnia::Mount {
                                        name: ::std::string::String::from("."),
                                        path: ::std::path::PathBuf::from(project_root()),
                                        writable: false,
                                    },
                                ]),
                        ),
                    )
                    .acquirer(omnia::MountAcquire),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        omnia::run::<(), Hooks>(builder.mode(omnia::Mode::Server)).await
    }
}
#[allow(unused_imports)]
pub use runtime::{run, main};
