crates/host-macros/src/snapshots/omnia_host_macros__runtime__tests__expand_server.snap
---
source: crates/host-macros/src/runtime.rs
expression: "expand_pretty(quote!({\n    hosts:\n    {\n        WasiHttp: HttpDefault, WasiOtel: OtelDefault, WasiKeyValue:\n        KeyValueDefault,\n    },\n}))"
---
mod runtime {
    use omnia::anyhow::Result;
    use omnia::futures::future;
    use omnia::Server;
    use omnia::tokio;
    use super::*;
    use omnia::Backend;
    #[derive(Clone)]
    struct Backends {
        http_default: HttpDefault,
        otel_default: OtelDefault,
        key_value_default: KeyValueDefault,
    }
    impl omnia::Backends for Backends {
        async fn connect() -> Result<Self> {
            let (http_default, otel_default, key_value_default) = tokio::try_join!(
                < HttpDefault as Backend > ::connect(), < OtelDefault as Backend >
                ::connect(), < KeyValueDefault as Backend > ::connect(),
            )?;
            Ok(Self {
                http_default,
                otel_default,
                key_value_default,
            })
        }
    }
    impl omnia::Provides<omnia::HttpCtx> for Backends {
        fn borrow(&mut self) -> <omnia::HttpCtx as omnia::HostCtx>::Borrow<'_> {
            &mut self.http_default
        }
    }
    impl omnia::Provides<WasiOtel> for Backends {
        fn borrow(&mut self) -> <WasiOtel as omnia::HostCtx>::Borrow<'_> {
            &mut self.otel_default
        }
    }
    impl omnia::Provides<WasiKeyValue> for Backends {
        fn borrow(&mut self) -> <WasiKeyValue as omnia::HostCtx>::Borrow<'_> {
            &mut self.key_value_default
        }
    }
    /// This runtime's host wiring, generic over the bundle carrying
    /// its hosts' contexts: the compiled-in bundle under `main` and
    /// `run`, any other under `run_with`.
    pub struct Hooks;
    impl<B> omnia::Wiring<B> for Hooks
    where
        B: Clone + Send + Sync + 'static,
        B: omnia::Provides<omnia::HttpCtx>,
        B: omnia::Provides<WasiOtel>,
        B: omnia::Provides<WasiKeyValue>,
    {
        fn link(deployment: &mut omnia::Deployment<omnia::StoreCtx<B>>) -> Result<()> {
            deployment.host::<WasiHttp, B>()?;
            deployment.host::<WasiOtel, B>()?;
            deployment.host::<WasiKeyValue, B>()?;
            Ok(())
        }
        async fn serve(runtime: &omnia::Runtime<B>) -> Result<()> {
            let servers: Vec<future::BoxFuture<'_, Result<()>>> = vec![
                Box::pin(WasiHttp.run(runtime)), Box::pin(WasiOtel.run(runtime)),
                Box::pin(WasiKeyValue.run(runtime)),
            ];
            future::try_join_all(servers).await?;
            Ok(())
        }
    }
    /// The deployment compiled in here (`manifest:` or the inline
    /// manifest keys; empty when neither is declared), for an
    /// embedder to overlay before `run_with`.
    pub fn manifest() -> omnia::ManifestSource {
        omnia::ManifestSource::Inline(omnia::Manifest::new())
    }
    /// Entry point: run the compiled-in deployment through this
    /// runtime's hosts and backends (raw argv passthrough for a
    /// command deployment compiled in here, otherwise the standard
    /// `run` grammar).
    #[tokio::main]
    pub async fn main() -> ::std::process::ExitCode {
        omnia::main::<
            Backends,
            Hooks,
        >(
                omnia::MainOptions::new(omnia::Mode::Server)
                    .program_name(env!("CARGO_PKG_NAME")),
            )
            .await
    }
    /// Run one deployment through this runtime's hosts and backends,
    /// blocking until the guest completes.
    #[tokio::main]
    pub async fn run(builder: omnia::DeploymentBuilder) -> Result<omnia::ExitStatus> {
        let deployment = builder
            .mode(omnia::Mode::Server)
            .build::<omnia::StoreCtx<Backends>>()
            .await?;
        omnia::run::<Backends, Hooks>(deployment).await
    }
    /// Run one deployment through this runtime's hosts over a bundle
    /// already in hand — nothing connects.
    pub async fn run_with<B>(
        builder: omnia::DeploymentBuilder,
        backends: B,
    ) -> Result<omnia::ExitStatus>
    where
        B: Clone + Send + Sync + 'static,
        Hooks: omnia::Wiring<B>,
    {
        let deployment = builder
            .mode(omnia::Mode::Server)
            .build::<omnia::StoreCtx<B>>()
            .await?;
        omnia::run_with::<B, Hooks>(deployment, backends).await
    }
}
#[allow(unused_imports, reason = "a nested-module invocation uses only some re-exports")]
pub use runtime::{Hooks, main, manifest, run, run_with};
